--- a/index.html
+++ b/index.html
@@ -1,38 +1,188 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Silverpride Visitor Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<title>Silverpride Visitor Analytics</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f5f7fb;
-    }
+<style>
+:root{
+  --bg:#f4f6fb;
+  --card:#ffffff;
+  --primary:#2f5bea;
+  --text:#1f2937;
+  --muted:#6b7280;
+}
 
-    .header {
-      padding: 14px;
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-      background: #1f3a8a;
-      color: white;
-    }
+body.dark{
+  --bg:#0f172a;
+  --card:#111827;
+  --text:#e5e7eb;
+  --muted:#9ca3af;
+}
 
-    iframe {
-      border: none;
-      width: 100%;
-      height: calc(100vh - 56px);
-    }
-  </style>
+body{
+  margin:0;
+  font-family: Inter, system-ui, Arial;
+  background:var(--bg);
+  color:var(--text);
+}
+
+/* ===== Header ===== */
+.header{
+  position:sticky;
+  top:0;
+  z-index:999;
+  background:var(--primary);
+  color:white;
+  padding:14px 24px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  font-weight:600;
+  box-shadow:0 2px 10px rgba(0,0,0,.15);
+}
+
+.toggle{
+  cursor:pointer;
+  background:white;
+  color:var(--primary);
+  border-radius:20px;
+  padding:6px 12px;
+  font-size:12px;
+}
+
+/* ===== Container ===== */
+.container{
+  padding:24px;
+  max-width:1400px;
+  margin:auto;
+}
+
+/* ===== KPI Cards ===== */
+.kpi-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:16px;
+  margin-bottom:20px;
+}
+
+.kpi{
+  background:var(--card);
+  padding:18px;
+  border-radius:14px;
+  box-shadow:0 6px 18px rgba(0,0,0,.08);
+}
+
+.kpi-title{
+  font-size:13px;
+  color:var(--muted);
+}
+
+.kpi-value{
+  font-size:28px;
+  font-weight:700;
+  margin-top:6px;
+}
+
+/* ===== Charts ===== */
+.grid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:20px;
+  margin-bottom:20px;
+}
+
+.card{
+  background:var(--card);
+  border-radius:16px;
+  padding:18px;
+  box-shadow:0 10px 25px rgba(0,0,0,.08);
+}
+
+.full{
+  grid-column:1 / -1;
+}
+
+iframe{
+  width:100%;
+  height:620px;
+  border:none;
+  border-radius:12px;
+}
+
+/* ===== Mobile ===== */
+@media(max-width:900px){
+  .grid{
+    grid-template-columns:1fr;
+  }
+  iframe{
+    height:720px;
+  }
+}
+</style>
 </head>
 
 <body>
-  <div class="header">
-    🏢 Silverpride Visitor Analytics
+
+<!-- ===== Premium Header ===== -->
+<div class="header">
+  🏢 Silverpride Visitor Analytics
+  <div class="toggle" onclick="toggleDark()">🌙 Dark Mode</div>
+</div>
+
+<div class="container">
+
+  <!-- ===== KPI ROW ===== -->
+  <div class="kpi-grid">
+    <div class="kpi">
+      <div class="kpi-title">Total Visitors (6M)</div>
+      <div class="kpi-value" id="kpiTotal">--</div>
+    </div>
+
+    <div class="kpi">
+      <div class="kpi-title">Peak Hour</div>
+      <div class="kpi-value" id="kpiPeak">--</div>
+    </div>
+
+    <div class="kpi">
+      <div class="kpi-title">Top Apartment</div>
+      <div class="kpi-value" id="kpiApt">--</div>
+    </div>
+
+    <div class="kpi">
+      <div class="kpi-title">Delivery %</div>
+      <div class="kpi-value" id="kpiDelivery">--</div>
+    </div>
   </div>
 
-  <iframe src="https://script.google.com/macros/s/AKfycbzPD4QqbxHyWtutAzCQEmBlUSbV18pWSvdiAVRLC3sDjD0Metk8SiuUhi-GVhzaSHgN/exec"></iframe>
+  <!-- ===== Embedded Dashboard ===== -->
+  <div class="card full">
+    <iframe
+      id="dashboardFrame"
+      src="PASTE_YOUR_APPS_SCRIPT_WEBAPP_URL_HERE">
+    </iframe>
+  </div>
+
+</div>
+
+<script>
+/* 🌙 Dark mode */
+function toggleDark(){
+  document.body.classList.toggle("dark");
+}
+
+/* 🔄 Auto refresh every 60 sec */
+setInterval(()=>{
+  document.getElementById("dashboardFrame").src += "";
+},60000);
+
+/* 🧠 (Optional) Fake KPI for now — we can wire real later */
+document.getElementById("kpiTotal").textContent = "39";
+document.getElementById("kpiPeak").textContent = "8 PM";
+document.getElementById("kpiApt").textContent = "102";
+document.getElementById("kpiDelivery").textContent = "71.8%";
+</script>
+
 </body>
 </html>
