--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ iframe{
   <div class="card full">
     <iframe
       id="dashboardFrame"
-      src="PASTE_YOUR_APPS_SCRIPT_WEBAPP_URL_HERE">
+      src="https://script.google.com/macros/s/AKfycbzPD4QqbxHyWtutAzCQEmBlUSbV18pWSvdiAVRLC3sDjD0Metk8SiuUhi-GVhzaSHgN/exec">
     </iframe>
   </div>
 
